--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "styled-component": "^2.8.0",
+    "sweetalert2": "^11.4.17",
     "tailwindcss": "^3.0.23",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
   },
